# foggy

./: .env-template  .gitignore  CLAUDE.md  README.md  phases.md  projectRequirements.md  pyproject.toml
.claude/agents/: library-docs-generator.md
.clinerules/: rules.md
ai_tasks/: langgraph_implementation_todos.md  teach-mode-implementation-steps.md
docs/: PRD.md  brainstorming.md  phases.md  prompt_history.md  teach-mode-flow.md  user_flows.excalidraw
example_learning_plan/: React_Hooks.md  learning_plan.json
example_setup_instructions/: setup.md
foggy/: __init__.py  __main__.py  prompts.py  tools.py
foggy/cli/: __init__.py  commands.py
foggy/conversation/: __init__.py  dummy.py  responses.py
foggy/graph/: __init__.py  edges.py  graph.py  models.py  nodes.py  teach_edges.py  teach_graph.py  teach_nodes.py  tools.py
foggy/langgraph/: __init__.py  models.py  nodes.py  tools.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
