[project]
name = "foggy"
version = "0.1.0"
description = "Foggy is your personalised coding tutor, teaching you through examples and projects for a language, library or framework of your choice."
authors = [
    {name = "theradtad",email = "anurag.parvatikar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.3",
    "pytest>=7.4.2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
foggy = "foggy.__main__:main"
