[tool.poetry]
name = "foggy"
version = "0.1.0"
description = "Foggy is your personalised coding tutor, teaching you through examples and projects for a language, library or framework of your choice."
authors = ["theradtad <anurag.parvatikar@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8.1.3"
pytest = ">=7.4.2"
langchain = ">=1.0.7,<2.0.0"
langchain-google-genai = ">=3.0.3,<4.0.0"
langchain-community = ">=0.0.38,<1.0.0"
langgraph = ">=1.0.3,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
langchain-tavily = ">=0.2.13"
ruff = ">=0.5.0"

[tool.poetry.scripts]
foggy = "foggy.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"